# appCostoScale

./: app.py  pyproject.toml  requirements.txt
