[tool.poetry]
name = "appcostoscale"
version = "0.1.0"
description = ""
authors = ["Niccolo Salvini <47143429+NiccoloSalvini@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
streamlit = "^1.33.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
